--- a/Leetcode/.vscode/settings.json
+++ b/Leetcode/.vscode/settings.json
@@ -6,6 +6,7 @@
         "ostream": "cpp",
         "deque": "cpp",
         "forward_list": "cpp",
-        "list": "cpp"
+        "list": "cpp",
+        "valarray": "cpp"
     }
 }
