--- a/Leetcode/.vscode/settings.json
+++ b/Leetcode/.vscode/settings.json
@@ -7,6 +7,7 @@
         "deque": "cpp",
         "forward_list": "cpp",
         "list": "cpp",
-        "valarray": "cpp"
+        "valarray": "cpp",
+        "random": "cpp"
     }
 }
