Leetcode/3016. Minimum Number of Pushes to Type Word II.cpp

--- a/Codeforces/.vscode/settings.json
+++ b/Codeforces/.vscode/settings.json
@@ -3,7 +3,8 @@
         "iostream": "cpp",
         "cmath": "cpp",
         "numeric": "cpp",
-        "regex": "cpp"
+        "regex": "cpp",
+        "ostream": "cpp"
     },
     "C_Cpp.errorSquiggles": "Enabled"
 }
