GeeksforGeeks/Reverse an Array.cpp

--- a/GeeksforGeeks/.vscode/settings.json
+++ b/GeeksforGeeks/.vscode/settings.json
@@ -2,6 +2,8 @@
     "files.associations": {
         "iostream": "cpp",
         "vector": "cpp",
-        "bitset": "cpp"
-    }
+        "bitset": "cpp",
+        "set": "cpp"
+    },
+    "C_Cpp.errorSquiggles": "disabled"
 }
